--- a/test/e2e/apimachinery/testdata/yamlfiles/core/v1/secrets.yaml
+++ b/test/e2e/apimachinery/testdata/yamlfiles/core/v1/secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: newrelic-config
+  name: test-set-env-secret
 type: Opaque
 data:
-  config: {{config_data}}
+  password: dmFsdWUtMg0K
+  username: dmFsdWUtMQ0K
