--- a/test/e2e/apimachinery/testdata/yamlfiles/core/v1/podtemplates.yaml
+++ b/test/e2e/apimachinery/testdata/yamlfiles/core/v1/podtemplates.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PodTemplate
 metadata:
-  name: nginx
+  name: myapp-pod
   labels:
-    name: nginx
-spec:
-  containers:
-  - name: nginx
-    image: nginx
-    ports:
-    - containerPort: 80
+    app: myapp
+template:
+  spec:
+    containers:
+    - name: myapp-container
+      image: busybox
+      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
